# proctor

./: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml  spec-runner.config.yaml
config/: proctor.yaml
docs/plans/: 2026-03-04-proctor-architecture-design.md  2026-03-04-proctor-phase0-phase1-plan.md
spec/: .executor-progress.txt  .executor-state.db-shm  .executor-state.db-wal  design.md  requirements.md  tasks.md
src/proctor/: __init__.py  __main__.py
src/proctor/core/: __init__.py  bootstrap.py  bus.py  config.py  memory.py  models.py  state.py
src/proctor/triggers/: __init__.py  base.py  scheduler.py  telegram.py  terminal.py
src/proctor/workers/: __init__.py  runtime.py
src/proctor/workflow/: __init__.py  dag.py  engine.py  spec.py
tests/: conftest.py  test_integration.py  test_scaffold.py
tests/test_core/: test_bootstrap.py  test_bus.py  test_config.py  test_memory.py  test_models.py  test_state.py
tests/test_triggers/: test_scheduler.py  test_telegram.py  test_terminal.py
tests/test_workers/: test_runtime.py
tests/test_workflow/: test_dag.py  test_engine.py  test_spec.py
