[project]
name = "proctor"
version = "0.1.0"
description = "Distributed autonomous agent system with microkernel architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "anyio>=4.12.1",
    "litellm>=1.82.0",
    "mcp>=1.26.0",
    "nats-py>=2.14.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "anyio[trio]>=4.12.1",
    "pyrefly>=0.55.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["proctor"]

[tool.pyrefly]
python-interpreter = ".venv/bin/python"
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

